[package]
name = "summon"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
ngx = "0.5.0"

[lib]
name = "summon"
path = "summon.rs"
crate-type   = ["rlib", "cdylib"]

[patch.crates-io]
ngx = { git = "https://github.com/nginxinc/ngx-rust", rev = "b08a9ee7a2bf9518acb1dac22fa3d241023047e5"}
